--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
       <h1>hi</h1><br/>
       Links<br/>
-      <a href="http://discord.gg/ctPpgVxPAT">Officeblock</a>
+      <a href="http://discord.gg/ctPpgVxPAT">Officeblock</a><br/>
       <a href"http://discord.gg/S9uJ794">Flashpoint</a>
   <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
   </body></html>
