--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html><head><title>nighthnh099.github.io</title>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Octocat.github.io : ">
+    <meta name="description" content="nighthnh099.github.io  Site of NightHnh099">
   </head>
   <body>
       <h1>hi</h1><br/>
       Links<br/>
       <a href="http://discord.gg/ctPpgVxPAT">Officeblock</a><br/>
-      <a href"http://discord.gg/S9uJ794">Flashpoint</a>
+      <a href="http://discord.gg/S9uJ794">Flashpoint</a>
   <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
   </body></html>
