--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
       <h1>hi</h1><br/>
-      Links<br/>
+      <h2>Links</h2><br/>
       <a href="http://discord.gg/ctPpgVxPAT">Officeblock</a><br/>
       <a href="http://discord.gg/S9uJ794">Flashpoint</a>
   <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
