--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="nighthnh099.github.io  Site of NightHnh099">
+    
+            .index{
+                font-family: arial
+    }
   </head>
-  <body>
+  <body class=index>
       <h1>hi</h1><br/>
       <h2>Links</h2><br/>
       <a href="http://discord.gg/ctPpgVxPAT">Officeblock</a><br/>
