--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="nighthnh099.github.io  Site of NightHnh099">
-    
+    <style>
             .index{
                 font-family: arial
     }
+    </style>
   </head>
   <body class=index>
       <h1>hi</h1><br/>
