--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     }
     </style>
   </head>
-  <body class=index>
-      <h1>hi</h1><br/>
-      <h2>Links</h2><br/>
-      <a href="http://discord.gg/ctPpgVxPAT">Officeblock</a><br/>
-      <a href="http://discord.gg/S9uJ794">Flashpoint</a>
-  <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+  <body>
+      <h1 class=index>hi</h1><br/>
+      <h2 class=index>Links</h2><br/>
+      <a href="http://discord.gg/ctPpgVxPAT" class=index>Officeblock</a><br/>
+      <a href="http://discord.gg/S9uJ794" class=index>Flashpoint</a>
+  <p>Published with <a href="https://pages.github.com" class=index>GitHub Pages</a></p>
   </body></html>
