--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body>
-      <h1 class=index>hi</h1><br/>
+      <h1 class=index>hi</h1>
       <h2 class=index>Links</h2><br/>
       <a href="http://discord.gg/ctPpgVxPAT" class=index>Officeblock</a><br/>
       <a href="http://discord.gg/S9uJ794" class=index>Flashpoint</a>
