--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
       <h1 class=index>hi</h1>
-      <h2 class=index>Links</h2><br/>
+      <h2 class=index>Links</h2>
       <a href="http://discord.gg/ctPpgVxPAT" class=index>Officeblock</a><br/>
       <a href="http://discord.gg/S9uJ794" class=index>Flashpoint</a>
   <p>Published with <a href="https://pages.github.com" class=index>GitHub Pages</a></p>
