--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
       <h2 class=index>Links</h2>
       <a href="http://discord.gg/ctPpgVxPAT" class=index>Officeblock</a><br/>
       <a href="http://discord.gg/S9uJ794" class=index>Flashpoint</a>
+      <a href="https://www.youtube.com/channel/UC_co59UDKXysd8H760TVIdg" class=index>YouTube Channel</a>
   <p>Published with <a href="https://pages.github.com" class=index>GitHub Pages</a></p>
   </body></html>
+<!-- Hello there. I am NightHnh099. I am an amateur web developer, freelance researcher and part of Flashpoint and Officeblock staff. This has been hidden on purpose so if you see this, congratulations for knowing ctrl shift i! -->
