--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 class=index>hi</h1>
       <h2 class=index>Links</h2>
       <a href="http://discord.gg/ctPpgVxPAT" class=index>Officeblock</a><br/>
-      <a href="http://discord.gg/S9uJ794" class=index>Flashpoint</a>
+      <a href="http://discord.gg/S9uJ794" class=index>Flashpoint</a><br/>
       <a href="https://www.youtube.com/channel/UC_co59UDKXysd8H760TVIdg" class=index>YouTube Channel</a>
   <p>Published with <a href="https://pages.github.com" class=index>GitHub Pages</a></p>
   </body></html>
