--- a/work/index.html
+++ b/work/index.html
@@ -1,4 +1,4 @@
-<html><head><title>Index of /work</title></head>
+<html><head><link rel="icon" href="https://play-lh.googleusercontent.com/BeHbMhAqYUII3_Ba6DpucNWjQD9ZL6OY6UzZHX4D5NTluq3tBYgzDI3TjYzOjSXi1sw"><title>Index of /work</title></head>
 <body>
 <h1>Index of /work</h1>
   <table><tr><th valign="top">&nbsp;</th><th>Name</th><th>Last modified</th><th>Size</th><th>Description</th></tr>
