--- a/work/arg-involved.html
+++ b/work/arg-involved.html
@@ -13,8 +13,10 @@
             }
    </style>
   <body>
-    <div id="TEXT1"><h1>That time someone put me into an ARG</h1>
+   <center><h1 class="WARNING1">That time someone put me into an ARG</h1></center>
+     <center>
       <iframe width="971" height="546" src="https://www.youtube.com/embed/wXsSrddI4Zo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
        </iframe>
+     </center>
       </body>
     </html>
