--- a/work/arg-involved.html
+++ b/work/arg-involved.html
@@ -7,13 +7,13 @@
                 background-color: #1F85DE;
   }
             .TEXT1{
-                color: #F47C13;
+                color: #E1812D;
                 font-family: Arial Rounded MT Bold;
                 text-align: center
             }
    </style>
   <body>
-   <center><h1 class="WARNING1">That time someone put me into an ARG</h1></center>
+   <center><h1 class="TEXT1">That time someone put me into an ARG</h1></center>
      <center>
       <iframe width="971" height="546" src="https://www.youtube.com/embed/wXsSrddI4Zo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
        </iframe>
