--- a/work/arg-involved.html
+++ b/work/arg-involved.html
@@ -8,7 +8,7 @@
   }
             .TEXT1{
                 color: #E1812D;
-                font-family: Arial Rounded MT Bold;
+                font-family: Arial Rounded MT;
                 text-align: center
             }
    </style>
