--- a/work/wiki/TheTekkitRealm.html
+++ b/work/wiki/TheTekkitRealm.html
@@ -357,7 +357,7 @@ body.yt-cinema-playing{overflow:hidden}.yt-cinema-greyout{background:rgba(0,0,0,
 
 	<meta property="og:url" content="https://youtube.fandom.com/wiki/TheTekkitRealm">
 
-	<meta property="og:image" content="https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg/revision/latest?cb=20210611063841">
+	<meta property="og:image" content="https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg">
 
 <script>var ads={"context":{"opts":{"adEngineVersion":"v82.17.2","enableCheshireCat":true,"enableICLazyRequesting":true,"enableAdTagManagerBackend":true,"pageType":"all_ads","platformName":"oasis"},"targeting":{"enablePageCategories":true,"esrbRating":"teen","featuredVideo":{"mediaId":"CR0MZ2ZP","videoTags":["Movies","Entertainment","Warner Bros.","EN","Batman","Studio Video","fandom","Christian Bale","by the numbers","Christopher Nolan","Wiki Targeted","JUN-21","The Dark Knight"],"isDedicatedForArticle":false},"hasFeaturedVideo":true,"hasPortableInfobox":true,"isUcp":true,"mappedVerticalName":"ent","newWikiCategories":["tech"],"pageArticleId":132633,"pageIsArticle":true,"pageName":"TheTekkitRealm","pageType":"article","wikiCustomKeyValues":"sex=m;gnre=comedy;gnre=casual;media=tv;age=13-17;age=under18;age=18-24;age=kids;age=teen;sex=f;gnre=drama;media=web","wikiDbName":"youtube","wikiId":2575,"wikiIsTop1000":true,"wikiLanguage":"en","wikiVertical":"tv","adTagManagerTags":{"tv":["youtube"],"sex":["f","m"],"theme":["realitytv","documentary"],"gnre":["drama","casual","comedy","biography"],"media":["web","tv"],"age":["kids","25-34","teen","13-17","under18","18-24"]}}},"consentQueue":[]};</script>
 <script src="https://static.wikia.nocookie.net/fandom-ae-assets/platforms/v82.17.2/ucp/main.bundle.js" defer=""></script>
@@ -1399,8 +1399,8 @@ var ssboot=Date.now();</script>
 		
 			<div class="pi-image-collection-tab-content current" id="pi-tab-0">
 				<figure class="pi-item pi-image">
-					<a href="https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg/revision/latest?cb=20210611063841" class="image image-thumbnail " title="Appearance">
-						<img src="https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg/revision/latest/scale-to-width-down/310?cb=20210611063841" srcset="https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg/revision/latest/scale-to-width-down/310?cb=20210611063841 1x, https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg/revision/latest/scale-to-width-down/620?cb=20210611063841 2x" class="pi-image-thumbnail" alt="Appearance" width="300" height="300" data-image-key="TheTekkitRealmFace.jpg" data-image-name="TheTekkitRealmFace.jpg">
+					<a href="https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg" class="image image-thumbnail " title="Appearance">
+						<img src="https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg" srcset="https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg 1x, https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg 2x" class="pi-image-thumbnail" alt="Appearance" width="300" height="300" data-image-key="TheTekkitRealmFace.jpg" data-image-name="TheTekkitRealmFace.jpg">
 						
 					</a>
 				</figure>
@@ -1408,8 +1408,8 @@ var ssboot=Date.now();</script>
 		
 			<div class="pi-image-collection-tab-content " id="pi-tab-1">
 				<figure class="pi-item pi-image">
-					<a href="https://static.wikia.nocookie.net/youtube/images/8/8f/TheTekkitRealm.jpg/revision/latest?cb=20210611063713" class="image image-thumbnail " title="YouTube Icon">
-						<img src="https://static.wikia.nocookie.net/youtube/images/8/8f/TheTekkitRealm.jpg/revision/latest/scale-to-width-down/310?cb=20210611063713" srcset="https://static.wikia.nocookie.net/youtube/images/8/8f/TheTekkitRealm.jpg/revision/latest/scale-to-width-down/310?cb=20210611063713 1x, https://static.wikia.nocookie.net/youtube/images/8/8f/TheTekkitRealm.jpg/revision/latest/scale-to-width-down/620?cb=20210611063713 2x" class="pi-image-thumbnail" alt="YouTube Icon" width="300" height="300" data-image-key="TheTekkitRealm.jpg" data-image-name="TheTekkitRealm.jpg">
+					<a href="https://static.wikia.nocookie.net/youtube/images/8/8f/TheTekkitRealm.jpg" class="image image-thumbnail " title="YouTube Icon">
+						<img src="https://static.wikia.nocookie.net/youtube/images/8/8f/TheTekkitRealm.jpg" srcset="https://static.wikia.nocookie.net/youtube/images/8/8f/TheTekkitRealm.jpg 1x, https://static.wikia.nocookie.net/youtube/images/8/8f/TheTekkitRealm.jpg 2x" class="pi-image-thumbnail" alt="YouTube Icon" width="300" height="300" data-image-key="TheTekkitRealm.jpg" data-image-name="TheTekkitRealm.jpg">
 						
 					</a>
 				</figure>
@@ -1552,8 +1552,8 @@ var ssboot=Date.now();</script>
 <h2 class="pi-item pi-item-spacing pi-title" data-source="title">InfurnessGAMES</h2>
 
 <figure class="pi-item pi-image" data-source="image">
-	<a href="https://static.wikia.nocookie.net/youtube/images/f/f9/InfurnessGAMES.jpg/revision/latest?cb=20210611065611" class="image image-thumbnail" title="">
-		<img src="https://static.wikia.nocookie.net/youtube/images/f/f9/InfurnessGAMES.jpg/revision/latest/scale-to-width-down/310?cb=20210611065611" srcset="https://static.wikia.nocookie.net/youtube/images/f/f9/InfurnessGAMES.jpg/revision/latest/scale-to-width-down/310?cb=20210611065611 1x, https://static.wikia.nocookie.net/youtube/images/f/f9/InfurnessGAMES.jpg/revision/latest/scale-to-width-down/620?cb=20210611065611 2x" class="pi-image-thumbnail" alt="" width="300" height="300" data-image-key="InfurnessGAMES.jpg" data-image-name="InfurnessGAMES.jpg">
+	<a href="https://static.wikia.nocookie.net/youtube/images/f/f9/InfurnessGAMES.jpg" class="image image-thumbnail" title="">
+		<img src="https://static.wikia.nocookie.net/youtube/images/f/f9/InfurnessGAMES.jpg" srcset="https://static.wikia.nocookie.net/youtube/images/f/f9/InfurnessGAMES.jpg 1x, https://static.wikia.nocookie.net/youtube/images/f/f9/InfurnessGAMES.jpg 2x" class="pi-image-thumbnail" alt="" width="300" height="300" data-image-key="InfurnessGAMES.jpg" data-image-name="InfurnessGAMES.jpg">
 		
 	</a>
 	
@@ -1646,8 +1646,8 @@ var ssboot=Date.now();</script>
 <h2 class="pi-item pi-item-spacing pi-title" data-source="title">DKVibez</h2>
 
 <figure class="pi-item pi-image" data-source="image">
-	<a href="https://static.wikia.nocookie.net/youtube/images/3/35/DKVibez.jpg/revision/latest?cb=20210611063800" class="image image-thumbnail" title="">
-		<img src="https://static.wikia.nocookie.net/youtube/images/3/35/DKVibez.jpg/revision/latest/scale-to-width-down/310?cb=20210611063800" srcset="https://static.wikia.nocookie.net/youtube/images/3/35/DKVibez.jpg/revision/latest/scale-to-width-down/310?cb=20210611063800 1x, https://static.wikia.nocookie.net/youtube/images/3/35/DKVibez.jpg/revision/latest/scale-to-width-down/620?cb=20210611063800 2x" class="pi-image-thumbnail" alt="" width="300" height="300" data-image-key="DKVibez.jpg" data-image-name="DKVibez.jpg">
+	<a href="https://static.wikia.nocookie.net/youtube/images/3/35/DKVibez.jpg" class="image image-thumbnail" title="">
+		<img src="https://static.wikia.nocookie.net/youtube/images/3/35/DKVibez.jpg" srcset="https://static.wikia.nocookie.net/youtube/images/3/35/DKVibez.jpg 1x, https://static.wikia.nocookie.net/youtube/images/3/35/DKVibez.jpg 2x" class="pi-image-thumbnail" alt="" width="300" height="300" data-image-key="DKVibez.jpg" data-image-name="DKVibez.jpg">
 		
 	</a>
 	
@@ -1740,8 +1740,8 @@ var ssboot=Date.now();</script>
 <h2 class="pi-item pi-item-spacing pi-title" data-source="title">Infurness</h2>
 
 <figure class="pi-item pi-image" data-source="image">
-	<a href="https://static.wikia.nocookie.net/youtube/images/5/53/Infurness.jpg/revision/latest?cb=20210611065249" class="image image-thumbnail" title="">
-		<img src="https://static.wikia.nocookie.net/youtube/images/5/53/Infurness.jpg/revision/latest/scale-to-width-down/310?cb=20210611065249" srcset="https://static.wikia.nocookie.net/youtube/images/5/53/Infurness.jpg/revision/latest/scale-to-width-down/310?cb=20210611065249 1x, https://static.wikia.nocookie.net/youtube/images/5/53/Infurness.jpg/revision/latest/scale-to-width-down/620?cb=20210611065249 2x" class="pi-image-thumbnail" alt="" width="300" height="300" data-image-key="Infurness.jpg" data-image-name="Infurness.jpg">
+	<a href="https://static.wikia.nocookie.net/youtube/images/5/53/Infurness.jpg" class="image image-thumbnail" title="">
+		<img src="https://static.wikia.nocookie.net/youtube/images/5/53/Infurness.jpg" srcset="https://static.wikia.nocookie.net/youtube/images/5/53/Infurness.jpg 1x, https://static.wikia.nocookie.net/youtube/images/5/53/Infurness.jpg 2x" class="pi-image-thumbnail" alt="" width="300" height="300" data-image-key="Infurness.jpg" data-image-name="Infurness.jpg">
 		
 	</a>
 	
@@ -1825,8 +1825,8 @@ var ssboot=Date.now();</script>
 <h2 class="pi-item pi-item-spacing pi-title" data-source="title">TheCryptoRealm</h2>
 
 <figure class="pi-item pi-image" data-source="image">
-	<a href="https://static.wikia.nocookie.net/youtube/images/4/47/TheCryptoRealm.jpg/revision/latest?cb=20210611065419" class="image image-thumbnail" title="">
-		<img src="https://static.wikia.nocookie.net/youtube/images/4/47/TheCryptoRealm.jpg/revision/latest/scale-to-width-down/310?cb=20210611065419" srcset="https://static.wikia.nocookie.net/youtube/images/4/47/TheCryptoRealm.jpg/revision/latest/scale-to-width-down/310?cb=20210611065419 1x, https://static.wikia.nocookie.net/youtube/images/4/47/TheCryptoRealm.jpg/revision/latest/scale-to-width-down/620?cb=20210611065419 2x" class="pi-image-thumbnail" alt="" width="300" height="300" data-image-key="TheCryptoRealm.jpg" data-image-name="TheCryptoRealm.jpg">
+	<a href="https://static.wikia.nocookie.net/youtube/images/4/47/TheCryptoRealm.jpg" class="image image-thumbnail" title="">
+		<img src="https://static.wikia.nocookie.net/youtube/images/4/47/TheCryptoRealm.jpg" srcset="https://static.wikia.nocookie.net/youtube/images/4/47/TheCryptoRealm.jpg 1x, https://static.wikia.nocookie.net/youtube/images/4/47/TheCryptoRealm.jpg 2x" class="pi-image-thumbnail" alt="" width="300" height="300" data-image-key="TheCryptoRealm.jpg" data-image-name="TheCryptoRealm.jpg">
 		
 	</a>
 	
@@ -1910,8 +1910,8 @@ var ssboot=Date.now();</script>
 <h2 class="pi-item pi-item-spacing pi-title" data-source="title">Walking across the Earth in Minecraft</h2>
 
 <figure class="pi-item pi-image" data-source="image">
-	<a href="https://static.wikia.nocookie.net/youtube/images/e/ed/WalkingAcrossTheEarthInMinecraft.jpg/revision/latest?cb=20210611065103" class="image image-thumbnail" title="">
-		<img src="https://static.wikia.nocookie.net/youtube/images/e/ed/WalkingAcrossTheEarthInMinecraft.jpg/revision/latest/scale-to-width-down/310?cb=20210611065103" srcset="https://static.wikia.nocookie.net/youtube/images/e/ed/WalkingAcrossTheEarthInMinecraft.jpg/revision/latest/scale-to-width-down/310?cb=20210611065103 1x, https://static.wikia.nocookie.net/youtube/images/e/ed/WalkingAcrossTheEarthInMinecraft.jpg/revision/latest/scale-to-width-down/620?cb=20210611065103 2x" class="pi-image-thumbnail" alt="" width="300" height="300" data-image-key="WalkingAcrossTheEarthInMinecraft.jpg" data-image-name="WalkingAcrossTheEarthInMinecraft.jpg">
+	<a href="https://static.wikia.nocookie.net/youtube/images/e/ed/WalkingAcrossTheEarthInMinecraft.jpg" class="image image-thumbnail" title="">
+		<img src="https://static.wikia.nocookie.net/youtube/images/e/ed/WalkingAcrossTheEarthInMinecraft.jpg" srcset="https://static.wikia.nocookie.net/youtube/images/e/ed/WalkingAcrossTheEarthInMinecraft.jpg 1x, https://static.wikia.nocookie.net/youtube/images/e/ed/WalkingAcrossTheEarthInMinecraft.jpg 2x" class="pi-image-thumbnail" alt="" width="300" height="300" data-image-key="WalkingAcrossTheEarthInMinecraft.jpg" data-image-name="WalkingAcrossTheEarthInMinecraft.jpg">
 		
 	</a>
 	
@@ -2048,8 +2048,8 @@ var ssboot=Date.now();</script>
 <h2 class="pi-item pi-item-spacing pi-title" data-source="title">TheTekkitRealm Network</h2>
 
 <figure class="pi-item pi-image" data-source="image">
-	<a href="https://static.wikia.nocookie.net/youtube/images/2/21/TheTekkitRealmNetwork.jpg/revision/latest?cb=20210611064858" class="image image-thumbnail" title="">
-		<img src="https://static.wikia.nocookie.net/youtube/images/2/21/TheTekkitRealmNetwork.jpg/revision/latest/scale-to-width-down/310?cb=20210611064858" srcset="https://static.wikia.nocookie.net/youtube/images/2/21/TheTekkitRealmNetwork.jpg/revision/latest/scale-to-width-down/310?cb=20210611064858 1x, https://static.wikia.nocookie.net/youtube/images/2/21/TheTekkitRealmNetwork.jpg/revision/latest/scale-to-width-down/620?cb=20210611064858 2x" class="pi-image-thumbnail" alt="" width="300" height="300" data-image-key="TheTekkitRealmNetwork.jpg" data-image-name="TheTekkitRealmNetwork.jpg">
+	<a href="https://static.wikia.nocookie.net/youtube/images/2/21/TheTekkitRealmNetwork.jpg" class="image image-thumbnail" title="">
+		<img src="https://static.wikia.nocookie.net/youtube/images/2/21/TheTekkitRealmNetwork.jpg" srcset="https://static.wikia.nocookie.net/youtube/images/2/21/TheTekkitRealmNetwork.jpg 1x, https://static.wikia.nocookie.net/youtube/images/2/21/TheTekkitRealmNetwork.jpg 2x" class="pi-image-thumbnail" alt="" width="300" height="300" data-image-key="TheTekkitRealmNetwork.jpg" data-image-name="TheTekkitRealmNetwork.jpg">
 		
 	</a>
 	
