--- a/other/watch.html
+++ b/other/watch.html
@@ -7,6 +7,7 @@
     body{
                 background-color: #292f2f;
             }
+  </style>
   </head><body>
 <center>
 <iframe width="971" height="546" src="https://www.youtube.com/embed/yjT5wIcMotw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
