--- a/other/com-test.html
+++ b/other/com-test.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="note"><div><span>Note:</span><br/><span>This is NOT my page. This page was made by nyahrdh.</span></div>
+      <div>
     <h1><a href="/">nyárð</a>/comtest</h1>
     <h1>COM-TEST is a hoax</h1>
     <h3>[nyahrdh wrote this]</h3>
@@ -72,5 +73,6 @@
     <p><a href="https://old.reddit.com/user/tess44">tess44</a></p>
     <p><a href="https://old.reddit.com/user/Skylindark_/">skylindark_</a></p>
     <p><a href="https://old.reddit.com/user/br0belike">br0belike</a></p>
+      </div>
   </body>
 </html>
