--- a/other/com-test.html
+++ b/other/com-test.html
@@ -7,9 +7,47 @@
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
     <style>
       body{margin-left:0;margin-right:0;margin-top:0}#note{background:#f8f9fa;font:13px arial,sans-serif;text-align:left;color:#202124;border:0;margin:0;border-bottom:1px solid #dadce0;line-height:16px;padding:16px 28px 24px 28px}#note *{display:inline;font:inherit;text-align:inherit;color:inherit;line-height:inherit;background:none;border:0;margin:0;padding:0;letter-spacing:0}#note a{text-decoration:none;color:#1a0dab}#note a:hover{text-decoration:underline}#note a:visited{color:#4b11a8}#note div{display:block;margin-top:4px}#note b{font-weight:bold;display:inline-block;direction:ltr}</style>
+  #body{
+  background-color: black;
+}
+
+p, h1, h2, h3, h4, blockquote, li {
+  color: white;
+  font-family: cmr10, serif;
+  font-weight: bold;
+}
+
+p, li {
+  font-size: 25px;
+}
+
+h4 {
+  font-size: 27px;
+}
+
+h3 {
+  font-size: 30px;
+}
+
+h2 {
+  font-size: 32px;
+}
+
+h1 {
+  font-size: 35px;
+}
+
+a:link {
+  color:white;
+}
+
+a:visited {
+  color:white;
+}
   </head>
   <body>
     <div id="note"><div><span>Note:</span><br/><span>This is NOT my page. This page was made by nyahrdh.</span></div></div>
+    <div id="body">
     <h1><a href="/">nyárð</a>/comtest</h1>
     <h1>COM-TEST is a hoax</h1>
     <h3>[nyahrdh wrote this]</h3>
@@ -72,5 +110,6 @@
     <p><a href="https://old.reddit.com/user/tess44">tess44</a></p>
     <p><a href="https://old.reddit.com/user/Skylindark_/">skylindark_</a></p>
     <p><a href="https://old.reddit.com/user/br0belike">br0belike</a></p>
+    </div>
   </body>
 </html>
