--- a/who.html
+++ b/who.html
@@ -11,25 +11,25 @@
     </style>
   </head>
   <body>
-Hello. I'm NightHnh099. I am an amateur web developer (well I know less than amateurs so eh?), freelance researcher and part of Flashpoint and Officeblock staff (didn't contribute as much as everyone else so questionable?).
+<class="index">Hello. I'm NightHnh099. I am an amateur web developer (well I know less than amateurs so eh?), freelance researcher and part of Flashpoint and Officeblock staff (didn't contribute as much as everyone else so questionable?).
 <br/>
 <br/>
-<h2>Experiences/Portfolio</h2>
-<li>Participant at the 10th Happy D I.T. Competition (Lost)</li>
-<li>Studied basic Macromedia Flash over the summer of 2019</li>
-<li>Studied basic HTML during 2018-2019</li><!--Happy D's HTML course seems to have been deprecated some time ago so you'll have to believe me I swear it existed -->
-<li>Studied <a href=http://happyd.edu.ph/junior_high_school/web-programming/>basic JavaScript</a> during 2019-2020</li>
-<li>Became Flashpoint Staff on April 5, 2021</li>
-<li>Has done random research 'dives':
-<ol>
-<li>Laurentien Color Pencils, Result: <a href=https://en.wikipedia.org/w/index.php?title=Laurentien_(art_supplies)&oldid=1019061245>Additional Info to Wikipedia Page</a>
-<li>Ang Totoong Narcolist, Result: <a href=https://archive.org/details/ang-totoong-narco-list>Archival of 5/6 of the lost videos</a>
-<li>Case of Alan Bruce Chmurny</li>
-<li>TheTekkitRealm, Result: Ongoing Expose</li>
-<li>Dutch Mill Company, Result: Archival of two Dutch Mill Screensavers</li>
-<li>Short dive into the Save the Kids crypto scam, Result: Archival of <a href=https://archive.org/details/save-the-kids-token-promo>infamous Promo</a>, and lesser known <a href=https://archive.org/details/save-the-kids-roadmap>Roadmap</a> and <a href=https://archive.org/details/save-the-kids-token-white-paper>White Paper</a></li>
-<li>Dead Man's Phone (Android Game), Result: Archival of most of the current <a href=https://archive.org/search.php?query=creator%3A%22Electric+Noir+Studios%22>versions</a> of the app</li>
-<li>Nostalgic flash games, Result: over 100 games saved, became Flashpoint Staff</li>
+<h2 class="index">Experiences/Portfolio</h2>
+<li class="index">Participant at the 10th Happy D I.T. Competition (Lost)</li>
+<li class="index">Studied basic Macromedia Flash over the summer of 2019</li>
+<li class="index">Studied basic HTML during 2018-2019</li><!--Happy D's HTML course seems to have been deprecated some time ago so you'll have to believe me I swear it existed -->
+<li class="index">Studied <a href=http://happyd.edu.ph/junior_high_school/web-programming/>basic JavaScript</a> during 2019-2020</li>
+<li class="index">Became Flashpoint Staff on April 5, 2021</li>
+<li class="index">Has done random research 'dives':
+<ol class="index">
+<li class="index">Laurentien Color Pencils, Result: <a href=https://en.wikipedia.org/w/index.php?title=Laurentien_(art_supplies)&oldid=1019061245>Additional Info to Wikipedia Page</a>
+<li class="index">Ang Totoong Narcolist, Result: <a href=https://archive.org/details/ang-totoong-narco-list>Archival of 5/6 of the lost videos</a>
+<li class="index">Case of Alan Bruce Chmurny</li>
+<li class="index">TheTekkitRealm, Result: Ongoing Expose</li>
+<li class="index">Dutch Mill Company, Result: Archival of two Dutch Mill Screensavers</li>
+<li class="index">Short dive into the Save the Kids crypto scam, Result: Archival of <a href=https://archive.org/details/save-the-kids-token-promo>infamous Promo</a>, and lesser known <a href=https://archive.org/details/save-the-kids-roadmap>Roadmap</a> and <a href=https://archive.org/details/save-the-kids-token-white-paper>White Paper</a></li>
+<li class="index">Dead Man's Phone (Android Game), Result: Archival of most of the current <a href=https://archive.org/search.php?query=creator%3A%22Electric+Noir+Studios%22>versions</a> of the app</li>
+<li class="index">Nostalgic flash games, Result: over 100 games saved, became Flashpoint Staff</li>
 </ol>
 </body>
 </html>
