--- a/who.html
+++ b/who.html
@@ -11,7 +11,7 @@
     </style>
   </head>
   <body>
-<class="index">Hello. I'm NightHnh099. I am an amateur web developer (well I know less than amateurs so eh?), freelance researcher and part of Flashpoint and Officeblock staff (didn't contribute as much as everyone else so questionable?).
+<center class="index">Hello. I'm NightHnh099. I am an amateur web developer (well I know less than amateurs so eh?), freelance researcher and part of Flashpoint and Officeblock staff (didn't contribute as much as everyone else so questionable?).</center>
 <br/>
 <br/>
 <h2 class="index">Experiences/Portfolio</h2>
