--- a/who.html
+++ b/who.html
@@ -31,5 +31,12 @@
 <li class="index">Dead Man's Phone (Android Game), Result: Archival of most of the current <a href=https://archive.org/search.php?query=creator%3A%22Electric+Noir+Studios%22>versions</a> of the app</li>
 <li class="index">Nostalgic flash games, Result: over 100 games saved, became Flashpoint Staff</li>
 </ol>
+<br/>
+<h2>Social Media</h2>
+<a href=https://www.youtube.com/channel/UC_co59UDKXysd8H760TVIdg>YouTube</a>
+<a href=https://github.com/NightHnh099>Github</a>
+<a href=https://stackoverflow.com/users/16774237/nighthnh099>Stackoverflow</a>
+Discord: NightHnh099#4647
+Email: nighthnh099@gmail.com
 </body>
 </html>
