I forgot the br
oops forgot line breaks

--- a/who.html
+++ b/who.html
@@ -33,10 +33,10 @@
 </ol>
 <br/>
 <h2>Social Media</h2>
-<a href=https://www.youtube.com/channel/UC_co59UDKXysd8H760TVIdg>YouTube</a>
-<a href=https://github.com/NightHnh099>Github</a>
-<a href=https://stackoverflow.com/users/16774237/nighthnh099>Stackoverflow</a>
-Discord: NightHnh099#4647
-Email: nighthnh099@gmail.com
+<a href=https://www.youtube.com/channel/UC_co59UDKXysd8H760TVIdg>YouTube</a><br/>
+<a href=https://github.com/NightHnh099>Github</a><br/>
+<a href=https://stackoverflow.com/users/16774237/nighthnh099>Stackoverflow</a><br/>
+Discord: NightHnh099#4647<br/>
+Email: nighthnh099@gmail.com<br/>
 </body>
 </html>
