--- a/other/wiki/TheTekkitRealm.html
+++ b/other/wiki/TheTekkitRealm.html
@@ -357,7 +357,7 @@ body.yt-cinema-playing{overflow:hidden}.yt-cinema-greyout{background:rgba(0,0,0,
 
 	<meta property="og:url" content="https://youtube.fandom.com/wiki/TheTekkitRealm">
 
-	<meta property="og:image" content="https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg">
+	<meta property="og:image" content="https://web.archive.org/web/20210620070038id_/https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg">
 
 <script>var ads={"context":{"opts":{"adEngineVersion":"v82.17.2","enableCheshireCat":true,"enableICLazyRequesting":true,"enableAdTagManagerBackend":true,"pageType":"all_ads","platformName":"oasis"},"targeting":{"enablePageCategories":true,"esrbRating":"teen","featuredVideo":{"mediaId":"CR0MZ2ZP","videoTags":["Movies","Entertainment","Warner Bros.","EN","Batman","Studio Video","fandom","Christian Bale","by the numbers","Christopher Nolan","Wiki Targeted","JUN-21","The Dark Knight"],"isDedicatedForArticle":false},"hasFeaturedVideo":true,"hasPortableInfobox":true,"isUcp":true,"mappedVerticalName":"ent","newWikiCategories":["tech"],"pageArticleId":132633,"pageIsArticle":true,"pageName":"TheTekkitRealm","pageType":"article","wikiCustomKeyValues":"sex=m;gnre=comedy;gnre=casual;media=tv;age=13-17;age=under18;age=18-24;age=kids;age=teen;sex=f;gnre=drama;media=web","wikiDbName":"youtube","wikiId":2575,"wikiIsTop1000":true,"wikiLanguage":"en","wikiVertical":"tv","adTagManagerTags":{"tv":["youtube"],"sex":["f","m"],"theme":["realitytv","documentary"],"gnre":["drama","casual","comedy","biography"],"media":["web","tv"],"age":["kids","25-34","teen","13-17","under18","18-24"]}}},"consentQueue":[]};</script>
 <script src="https://static.wikia.nocookie.net/fandom-ae-assets/platforms/v82.17.2/ucp/main.bundle.js" defer=""></script>
@@ -1399,8 +1399,8 @@ var ssboot=Date.now();</script>
 		
 			<div class="pi-image-collection-tab-content current" id="pi-tab-0">
 				<figure class="pi-item pi-image">
-					<a href="https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg" class="image image-thumbnail " title="Appearance">
-						<img src="https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg" srcset="https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg 1x, https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg 2x" class="pi-image-thumbnail" alt="Appearance" width="300" height="300" data-image-key="TheTekkitRealmFace.jpg" data-image-name="TheTekkitRealmFace.jpg">
+					<a href="https://web.archive.org/web/20210620070038id_/https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg" class="image image-thumbnail " title="Appearance">
+						<img src="https://web.archive.org/web/20210620070038id_/https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg" srcset="https://web.archive.org/web/20210620070038id_/https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg 1x, https://web.archive.org/web/20210620070038id_/https://static.wikia.nocookie.net/youtube/images/b/b6/TheTekkitRealmFace.jpg 2x" class="pi-image-thumbnail" alt="Appearance" width="300" height="300" data-image-key="TheTekkitRealmFace.jpg" data-image-name="TheTekkitRealmFace.jpg">
 						
 					</a>
 				</figure>
@@ -1408,8 +1408,8 @@ var ssboot=Date.now();</script>
 		
 			<div class="pi-image-collection-tab-content " id="pi-tab-1">
 				<figure class="pi-item pi-image">
-					<a href="https://static.wikia.nocookie.net/youtube/images/8/8f/TheTekkitRealm.jpg" class="image image-thumbnail " title="YouTube Icon">
-						<img src="https://static.wikia.nocookie.net/youtube/images/8/8f/TheTekkitRealm.jpg" srcset="https://static.wikia.nocookie.net/youtube/images/8/8f/TheTekkitRealm.jpg 1x, https://static.wikia.nocookie.net/youtube/images/8/8f/TheTekkitRealm.jpg 2x" class="pi-image-thumbnail" alt="YouTube Icon" width="300" height="300" data-image-key="TheTekkitRealm.jpg" data-image-name="TheTekkitRealm.jpg">
+					<a href="https://web.archive.org/web/20210620070038id_/https://static.wikia.nocookie.net/youtube/images/8/8f/TheTekkitRealm.jpg" class="image image-thumbnail " title="YouTube Icon">
+						<img src="https://web.archive.org/web/20210620070038id_/https://static.wikia.nocookie.net/youtube/images/8/8f/TheTekkitRealm.jpg" srcset="https://web.archive.org/web/20210620070038id_/https://static.wikia.nocookie.net/youtube/images/8/8f/TheTekkitRealm.jpg 1x, https://web.archive.org/web/20210620070038id_/https://static.wikia.nocookie.net/youtube/images/8/8f/TheTekkitRealm.jpg 2x" class="pi-image-thumbnail" alt="YouTube Icon" width="300" height="300" data-image-key="TheTekkitRealm.jpg" data-image-name="TheTekkitRealm.jpg">
 						
 					</a>
 				</figure>
