--- a/work/astound/hellow~1.htm
+++ b/work/astound/hellow~1.htm
@@ -9,7 +9,7 @@
 <P>
 The Astound Distribution Wizard can create a sample HTML web page for you that contains all of the codes required to play your presentation. You can modify or add to this page or copy and paste it to another page.<P>
 <P>
-<A HREF = "hellow~1.asn"> <IMG SRC = "hellow~1.jpg"></A><P>
+<A HREF = "hellow~1.asn"> <IMG SRC = "HELLOW~1.JPG"></A><P>
 <P>
 The Astound Web Player Plugin/Viewer can be downloaded from the <A HREF = "http://www.astoundinc.com/awp/awplinked.html">Astound Web Player Web Page</A>.<P>
 <HR>
