--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link rel="icon" href="https://play-lh.googleusercontent.com/BeHbMhAqYUII3_Ba6DpucNWjQD9ZL6OY6UzZHX4D5NTluq3tBYgzDI3TjYzOjSXi1sw">
-    <meta name="description" content="nighthnh099.github.io  Site of NightHnh099">
+    <meta name="description" content="nighthnh099.github.io">
     <style>
             .index{
                 font-family: arial
@@ -18,4 +18,3 @@
       <a href="https://www.youtube.com/channel/UC_co59UDKXysd8H760TVIdg" class=index>YouTube Channel</a>
   <p>Published with <a href="https://pages.github.com" class=index>GitHub Pages</a></p>
   </body></html>
-<!-- Hello there. I am NightHnh099. I am an amateur web developer, freelance researcher and part of Flashpoint and Officeblock staff. This has been hidden on purpose so if you see this, congratulations for knowing ctrl shift i! -->
