--- a/work/arg-involved.html
+++ b/work/arg-involved.html
@@ -15,8 +15,9 @@
   <body>
    <center><h1 class="TEXT1">That time someone put me into an ARG</h1></center>
      <center>
-      <iframe width="971" height="546" src="https://www.youtube.com/embed/wXsSrddI4Zo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-       </iframe>
+      <!--<iframe width="971" height="546" src="https://www.youtube.com/embed/wXsSrddI4Zo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+       </iframe> Original was deleted-->
+      <embed src=" https://ia801508.us.archive.org/17/items/10_019-szhr-ry_Channel_Archive/nighthnh099%2B%C2%A3%24%26%26%3B%3B%3B%3B%24%26%E2%82%AC%40%C2%A3%2B%26%2B%3B%2B_%2B_%2B%29%29%29%29%29%29%29%29%29%29%29%29%29%29%29%29%29%29%29%29%29%29%29%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D_0%3D039029202029200202020-wXsSrddI4Zo.mp4" height="640" width="480"></embed>
      </center>
       </body>
     </html>
