--- a/other/plug_inst_emb.html
+++ b/other/plug_inst_emb.html
@@ -6,7 +6,7 @@
  <meta name="description" content="nighthnh099.github.io">
  <body>
 
-<a href="http://www.ipix.com/"><b><font face="Arial"><img src="http://sav.org/images/eye2.gif" width="55" height="51" align="BOTTOM" border="0" naturalsizeflag="3"></font></b></a>
+<a href="http://www.ipix.com/"><b><font face="Arial"><img src="https://web.archive.org/web/20160531003741id_/http://sav.org/images/eye2.gif" width="55" height="51" align="BOTTOM" border="0" naturalsizeflag="3"></font></b></a>
 <a target="_blank" href="https://microsoft.com/getsilverlight/default.aspx"><img src="http://go.microsoft.com/fwlink/?linkid=108181" alt="Get Microsoft Silverlight"></a>
 <a href="http://unity3d.com/webplayer/" title="Unity Web Player. Install now! Restart your browser after install."><img alt="Unity Web Player. Install now! Restart your browser after install." src="http://web.archive.org/web/20191208172408id_/http://webplayer.unity3d.com/installation/getunity.png" width="193" height="63" /></a>
 <a href="http://web.archive.org/web/20050307022114/http://www.adobe.com/products/acrobat/readstep.html"><img border="0" height="31" width="88" src="http://web.archive.org/web/20050307022114im_/http://www.adobe.com/images/getacro.gif" alt="Get Adobe Reader"></a>
@@ -29,7 +29,7 @@
 <a href="http://web.archive.org/web/19961219083805/http://www.smoothmove.com/downloads/"><img src="http://web.archive.org/web/19961219083805im_/http://www.smoothmove.com/graphics/smpower.gif" border="0" align="bottom"></a>
 <a href="http://web.archive.org/web/19961219083805/http://www.microsoft.com/" target="_top"><img src="http://web.archive.org/web/19961219083805im_/http://www.smoothmove.com/graphics/ie_animated.gif" border="0"></a> <!--hspace="50"-->
 <a href="https://web.archive.org/web/19970301031706/http://www.microsoft.com/ie/download/"><img src="http://web.archive.org/web/19970301031706im_/http://www.olivr.com/images/ie_static.gif" alt="Get Explorer" width="88" height="31" vspace="0" border="0"></a> <!--hspace="20"-->
-<a href="http://www.iseemedia.com/zoom/downloads.html"><img src="http://www.diamondimages.com/gif/get_lpv.gif" /*align="Left"*/ border="0" hspace="15" alt="Live Picture viewer" width="95" height="33"></a>
+<a href="http://www.iseemedia.com/zoom/downloads.html"><img src="https://web.archive.org/web/19980614111854id_/http://www.diamondimages.com/gif/get_lpv.gif" /*align="Left"*/ border="0" hspace="15" alt="Live Picture viewer" width="95" height="33"></a>
 <a href="http://web.archive.org/web/20001119043800/http://www.sitecentral.com/" target="_parent"><em><font size="2"><img src="http://web.archive.org/web/20001119043800im_/http://www.hyperstudio.com/images/sc_scmall.gif" alt="Visit SiteCentral" border="0" width="109" height="35"></font></em></a>
 <!-- <em><font size="2"><br>These example pages were built with SiteCentral</font></em> -->
 <a href="http://web.archive.org/web/20001119043800/http://www.hyperstudio.com/resource/hsplugin/plugin.html" target="_blank"><img src="http://web.archive.org/web/20001119043800im_/http://www.hyperstudio.com/images/hsplugin.gif" alt="Get the HyperStudio Plug-in!" border="0" width="93" height="35"></a>
