--- a/other/plug_inst_emb.html
+++ b/other/plug_inst_emb.html
@@ -37,7 +37,7 @@
 <a href="http://web.archive.org/web/19961226101808/http://quickdraw3d.apple.com/Download.HTML"><img border="0" width="94" height="39" alt="[QD3D ver 1.5]" src="http://web.archive.org/web/19961226101840im_/http://quickdraw3d.apple.com/Images/QD3D_Now.gif"></a>
 <a href="http://web.archive.org/web/19980429141437/http://www.apple.com/download/index.html"><img src="http://web.archive.org/web/19980429141437im_/http://www.apple.com/quicktime/images/quicktime3download.gif" width="88" height="31" border="0" align="left" alt="Download QuickTime 3"></a>
 <a href="http://www.ipix.com/"><img src="https://highton.com/images/IPIXplugin.gif" width="99" height="32" align="BOTTOM" border="0" naturalsizeflag="3"></a>
-<a href="noipix.html"><img src="https://web.archive.org/web/20000302115247im_/http://www.iqtvra.org/gifs/ipixfree.gif" border="0"></a>
+<a href="https://web.archive.org/web/20000302115247/http://www.iqtvra.org/noipix.html"><img src="https://web.archive.org/web/20000302115247im_/http://www.iqtvra.org/gifs/ipixfree.gif" border="0"></a>
 
  </body>
 </html>
